make project compile
* remove unnecessary and invalid parts